--- a/templates/partials/_profileInfo.html.twig
+++ b/templates/partials/_profileInfo.html.twig
@@ -11,16 +11,16 @@
               {% else %}
                 "{{ asset('/uploads/avatars/' ~ user.avatar) }}"
               {% endif %}
-              class="avatar avatar-medium" alt="{{ 'alt.avatar'|trans }} {{ user.pseudo }}">
+              class="avatar avatar-medium" alt="{{ 'alt.avatar'|trans|raw }} {{ user.pseudo }}">
           </a>
           <h6 class="mt-1">{{ user.pseudo }}<h6>
-          <p class="col-text-profile">{{ user.getCalculateAge() }} {{ 'profile.age'|trans }}</p>
+          <p class="col-text-profile">{{ user.getCalculateAge() }} {{ 'profile.age'|trans|raw }}</p>
           {# revoir le format de la date suivant la langue #}
-          <p class="col-text-profile">{{ 'profile.register_date'|trans }} {{ user.createdAt|date('d/m/Y') }}</p>
+          <p class="col-text-profile">{{ 'profile.register_date'|trans|raw }} {{ user.createdAt|date('d/m/Y') }}</p>
         </div>
     </div>
     <div class="card-body">
-      <p class="col-text-profile"><i class="far fa-id-card"></i> {{ 'profile.completed'|trans }} {{ user.completed }}%</p>
+      <p class="col-text-profile"><i class="far fa-id-card"></i> {{ 'profile.completed'|trans|raw }} {{ user.completed }}%</p>
       <div class="progress mb-2">
           {% if user.completed <= 50 %}
               {% set progressClass = "bg-warning" %}
@@ -33,10 +33,10 @@
       </div>
       <hr>
       {% if not user.isSubscribed %}
-        <p class="col-text-profile text-center">{{ 'profile.text_register'|trans }}</p>
+        <p class="col-text-profile text-center">{{ 'profile.text_register'|trans|raw }}</p>
         <div class="text-center">
             <a href="#">
-                <button type="button" class="btn btn-register btn-sm"><i class="fas fa-route"></i>&nbsp;{{ 'profile.btn_register'|trans }}</button>
+                <button type="button" class="btn btn-register btn-sm"><i class="fas fa-route"></i>&nbsp;{{ 'profile.btn_register'|trans|raw }}</button>
             </a>
         </div>
       {% endif %}
@@ -47,7 +47,7 @@
   </div>
   <div class="card mt-2">
     <div class="card-header">
-      <div class="text-center">{{ 'profile.title_dashboard'|trans }}</div>
+      <div class="text-center">{{ 'profile.title_dashboard'|trans|raw }}</div>
     </div>
     <div class="card-body">
       <div class="row row-dashboard">
