--- a/templates/partials/_profileInterests.html.twig
+++ b/templates/partials/_profileInterests.html.twig
@@ -1,7 +1,7 @@
 {% for interestType in interestsType %}
     <div class="card mt-2 card-profile">
         <div class="card-header card-header-profile-interest text-left">
-            <i class="{{ interestType.iconType }}"></i>&nbsp;&nbsp;{{ interestType.nameType|trans }}
+            <i class="{{ interestType.iconType }}"></i>&nbsp;&nbsp;{{ interestType.nameType|trans|raw }}
         </div>
         <div class="card-body text-left">
             {% set numRow = 0 %}
@@ -24,7 +24,7 @@
                     {# --- #}
                     <div class="col-12 col-md col-lg custom-control custom-switch custom-control-inline mb-2">
                         <input type="checkbox" class="custom-control-input control-interest" id="customSwitch_{{ interestName.id }}" {{ interestChecked }}>
-                        <label class="custom-control-label label-interest" for="customSwitch_{{ interestName.id }}">{{ interestName.name|trans }}</label>
+                        <label class="custom-control-label label-interest" for="customSwitch_{{ interestName.id }}">{{ interestName.name|trans|raw }}</label>
                     </div>
                 {% endif %}
             {% endfor %}
