--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'baseLogin.html.twig' %}
 
-{% block title %}{{ 'login.block_title'|trans }}{% endblock %}
+{% block title %}{{ 'login.block_title'|trans|raw }}{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
     {{ encore_entry_link_tags('css/login') }}
@@ -29,22 +29,22 @@
         {% if app.user %}
             <div class="d-flex justify-content-center pt-2">
                 <div class="alert alert-info" role="alert" style="min-width: 20rem; max-width: 30rem;">
-                    <h4 class="alert-heading text-center">{{ 'login.alert.heading'|trans }}</h4>
+                    <h4 class="alert-heading text-center">{{ 'login.alert.heading'|trans|raw }}</h4>
                     <hr>
-                    <p class="alert-connected">{{ 'login.alert.msg_loggued'|trans }}
+                    <p class="alert-connected">{{ 'login.alert.msg_loggued'|trans|raw }}
                     <br><strong>{{ app.user.username }}</strong></p>
                     <hr>
                     <p class="alert-connected">
                         <a href="{{ path('homepage') }}"
                             <button type="button" class="btn btn-homepage btn-sm">
                                     <i class="fas fa-home"></i>&nbsp;
-                                    {{ 'login.alert.btn_home'|trans }}
+                                    {{ 'login.alert.btn_home'|trans|raw }}
                             </button>
                         </a>
                         <a href="{{ path('hbt_logout') }}"
                             <button type="button" class="btn btn-disconnect btn-sm">
                                     <i class="fas fa-sign-out-alt"></i>&nbsp;
-                                    {{ 'login.alert.btn_disconnect'|trans }}
+                                    {{ 'login.alert.btn_disconnect'|trans|raw }}
                             </button>
                         </a>
                     </p>
@@ -54,7 +54,7 @@
             <div class="d-flex justify-content-center pt-2">
                 <div class="card mb-3">
                     <div class="card-header text-white text-center">
-                        <h4>{{ 'login.card_header'|trans }}</h4>
+                        <h4>{{ 'login.card_header'|trans|raw }}</h4>
                     </div>
                     <div class="card-body">
                         <form method="POST" novalidate>
@@ -65,22 +65,22 @@
                             {% endif %}
                         
                             <div class="form-group">
-                                <label for="inputEmail">{{ 'form.label_email'|trans }}</label>
+                                <label for="inputEmail">{{ 'form.label_email'|trans|raw }}</label>
                                 <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control
                                 {% if boolEmail %} is-invalid{% endif %}" required autofocus>
                                 {% if boolEmail %}
                                     <div class="invalid-feedback">
-                                        {{ 'login.form.feedback_email'|trans }}
+                                        {{ 'login.form.feedback_email'|trans|raw }}
                                     </div>
                                 {% endif %}
                             </div>
                             <div class="form-group">
-                                <label for="inputPassword">{{ 'form.label_password'|trans }}</label>
+                                <label for="inputPassword">{{ 'form.label_password'|trans|raw }}</label>
                                 <input type="password" name="password" id="inputPassword" class="form-control
                                 {% if boolPassword %} is-invalid {% endif %}" required>
                                 {% if boolPassword %}
                                     <div class="invalid-feedback">
-                                        {{ 'login.form.feedback_password'|trans }}
+                                        {{ 'login.form.feedback_password'|trans|raw }}
                                     </div>
                                 {% endif %}
                             </div>
@@ -96,7 +96,7 @@
                                 </div>
                             #}
                             <button type="submit" class="btn btn-login btn-block">
-                                <i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;{{ 'form.btn_login'|trans }}
+                                <i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;{{ 'form.btn_login'|trans|raw }}
                             </button>
                         </form>
                     </div>
@@ -105,13 +105,13 @@
                             <div class="col-4">
                                 <p id="p-left">
                                     <i class="fas fa-home"></i>&nbsp;
-                                    <a href="{{ path('homepage')}}">{{ 'login.home.card_footer'|trans }}</a>
+                                    <a href="{{ path('homepage')}}">{{ 'login.home.card_footer'|trans|raw }}</a>
                                 </p>
                             </div>
                             <div class="col-8">
                                 <p id="p-right">
                                     <i class="fas fa-user-lock"></i>&nbsp;
-                                    <a href="#">{{ 'login.password.card_footer'|trans }}</a>
+                                    <a href="#">{{ 'login.password.card_footer'|trans|raw }}</a>
                                 </p>
                             </div>
                         </div>
