implementation of subscription in main template

--- a/templates/partials/_profileInfo.html.twig
+++ b/templates/partials/_profileInfo.html.twig
@@ -32,13 +32,19 @@
           <div class="progress-bar {{ progressClass }}" role="progressbar" style="width:{{ user.completed }}%" aria-valuenow="{{ user.completed }}" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
       <hr>
-      {% if not user.isSubscribed %}
+      {% if user.subscriptions|length == 0 %}
         <p class="col-text-profile text-center">{{ 'profile.text_register'|trans|raw }}</p>
         <div class="text-center">
             <a href="#">
                 <button type="button" class="btn btn-register btn-sm"><i class="fas fa-route"></i>&nbsp;{{ 'profile.btn_register'|trans|raw }}</button>
             </a>
         </div>
+      {% else %}
+        {# subscribed #}
+        {% for sub in user.subscriptions %}
+          <p>{{ sub.subscribBeginAt|date('d/m/Y') }}</p>
+          <p>{{ sub.subscriberType.type|trans|raw }}</p>
+        {% endfor %}
       {% endif %}
       {# 
         Gérer si la personne est abonnée
