--- a/templates/partials/_profileInfo.html.twig
+++ b/templates/partials/_profileInfo.html.twig
@@ -32,13 +32,24 @@
           <div class="progress-bar {{ progressClass }}" role="progressbar" style="width:{{ user.completed }}%" aria-valuenow="{{ user.completed }}" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
       <hr>
-      {% if user.subscriptions|length == 0 %}
-        <p class="col-text-profile text-center">{{ 'profile.text_unregister'|trans|raw }}</p>
-        <div class="text-center">
+      {% if not user.isSubscribed %}
+        {% if lastSubscription|length == 0 %}
+          <p class="col-text-profile text-center">{{ 'profile.text_unregister'|trans|raw }}</p>
+          <div class="text-center">
+              <a href="#">
+                  <button type="button" class="btn btn-register btn-sm"><i class="fas fa-route"></i>&nbsp;{{ 'profile.btn_register'|trans|raw }}</button>
+              </a>
+          </div>
+        {% else %}
+          <p class="col-text-profile text-center">
+            {{ 'subscription.expired'|trans|raw }} {{ lastSubscription.subscribEndAt|date('d/m/Y') }}.
+          </p>
+          <div class="text-center">
             <a href="#">
-                <button type="button" class="btn btn-register btn-sm"><i class="fas fa-route"></i>&nbsp;{{ 'profile.btn_register'|trans|raw }}</button>
+                <button type="button" class="btn btn-register btn-sm"><i class="fas fa-route"></i>&nbsp;{{ 'profile.btn_renew_register'|trans|raw }}</button>
             </a>
         </div>
+        {% endif %}
       {% else %}
         {# subscribed #}
         {% for sub in user.subscriptions %}
