add EventSubscriber to check subscription

--- a/templates/partials/_profileInfo.html.twig
+++ b/templates/partials/_profileInfo.html.twig
@@ -81,7 +81,7 @@
       <hr>
       <div class="row row-dashboard">
         <div class="col-9">
-          <span class="col-text-profile"><i class="fas fa-newspaper"></i> Mes articles</span>
+          <span class="col-text-profile"><i class="fas fa-pen-fancy"></i> Mes articles</span>
         </div>
         <div class="col-3">
           <span class="col-text-profile text-right badge badge-blue">01</span>
