--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -56,6 +56,7 @@
                         {{ form_row(form.lastName) }}
                         {{ fieldRender.formFieldRender('email', form.email) }}
                         {{ fieldRender.formDateRender('birthDate', form.birthDate) }}
+                        {{ form_row(form.phoneNumber) }}
                         {{ form_row(form.profession) }}
                         {{ form_row(form.company) }}
                     </div>
