finish change password page

--- a/templates/profile/changePassword.html.twig
+++ b/templates/profile/changePassword.html.twig
@@ -3,7 +3,7 @@
 {# use macro to customize the render of the form #}
 {% import 'macros/formRender.html.twig' as fieldRender %}
 
-{% block title %}{{ 'login.block_title'|trans|raw }}{% endblock %}
+{% block title %}{{ app.user.pseudo }}{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
     {{ encore_entry_link_tags('css/profile') }}
@@ -15,25 +15,15 @@
         <div class="d-flex justify-content-center pt-5">
             <div class="card mb-3">
                 <div class="card-header text-white text-center">
-                    <h5>{{ 'login.card_header'|trans|raw }}</h5>
+                    <h5>{{ 'changePassword.card_header'|trans|raw }}</h5>
                 </div>
                 <div class="card-body">
                     {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
-
                         {{ fieldRender.formFieldRender('oldPassword', form.oldPassword, 'change_password') }}
-                        
-                        
                         {{ fieldRender.formNewPasswordRender('newPassword', form.newPassword, 'change_password') }}
-                        
-                        
-                        {#
-                         {{ form_row(form.newPassword) }}
-                         #}
-
                         <button type="submit" class="btn btn-login btn-block">
-                            <i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;{{ 'form.btn_login'|trans|raw }}
+                            <i class="fas fa-check"></i>&nbsp;&nbsp;{{ 'form.btn_validate'|trans|raw }}
                         </button>
-
                     {{ form_end(form) }}
                 </div>
             </div>
