--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -13,7 +13,8 @@ $happyGrey: #f5f5f5;
 // Custom Bootstrap
 $theme-colors: (
   happyDarkBlue: $happyDarkBlue,
-  happyOrange: $happyOrange
+  happyOrange: $happyOrange,
+  happyGrey: $happyGrey
 );
 
 // Import bootstrap
@@ -63,6 +64,11 @@ body {
 
 .btn-outline-happyDarkBlue:hover {
   color: #ffffff;
+}
+
+.btn-search {
+  border-color: #ced4da;
+  background-color: $happyGrey;
 }
 
 #navhome {
