work on paginator

--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -14,12 +14,12 @@
             <span class="text-result float-left">{{ resultSearch|length }} résultats trouvés</span>
         </div>
         <div class="col">
-            <span class="text-advanced-search float-right">Recherche Avancée <i class="fas fa-caret-down"></i></span>
+            <span class="text-advanced-search float-right" id="btnAdvancedSearch">Recherche Avancée <i id="iconAdvancedSearch" class="fas fa-caret-down"></i></span>
         </div>
     </div>
     <hr>
     <div class="d-flex justify-content-center pt-1">
-        <div class="card"  id="advancedSearch" style="display:none">
+        <div class="card" id="advancedSearch" style="display:none;">
             <div class="card-body">
                 Formulaire de recherche avancée
             </div>
@@ -92,6 +92,21 @@
                 if (bht < wht) {
                     $('footer').css("position", "absolute")
                 }
+            }
+        })
+    
+        // advanced search form visible or not
+        document.getElementById("btnAdvancedSearch").addEventListener("click", function(){
+            document.getElementById("advancedSearch").style.display
+            if ( document.getElementById("advancedSearch").style.display === "none") {
+                $("#advancedSearch").show("slow")
+                document.getElementById("iconAdvancedSearch").className = "fas fa-caret-up"
+                document.getElementById("advancedSearch").style.display = "inline"
+            }
+            else {
+                $("#advancedSearch").hide("slow")
+                document.getElementById("iconAdvancedSearch").className = "fas fa-caret-down"
+                document.getElementById("advancedSearch").style.display = "none"
             }
         })
     </script>
