--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row pt-4">
         <div class="col">
-            <span class="text-result float-left">{{ resultSearch|length }} résultats trouvés</span>
+            <span class="text-result float-left">{{ paginator|length }} résultats trouvés  {{ nbPage }} pages</span>
         </div>
         <div class="col">
             <span class="text-advanced-search float-right" id="btnAdvancedSearch">Recherche Avancée <i id="iconAdvancedSearch" class="fas fa-caret-down"></i></span>
@@ -28,7 +28,7 @@
     <div class="d-flex justify-content-center pt-2">
     <div class="card">
         <div class="card-body">
-            {% for result in resultSearch %}
+            {% for result in paginator %}
                 <div class="row mb-3 mt-3">
                     <div class="col-7 col-md-8">
                         <div class="media position-relative">
@@ -59,7 +59,7 @@
         <nav aria-label="Page navigation example">
             <ul class="pagination pagination-sm justify-content-center">
                 <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-angle-double-left"></i></a>
                 </li>
                 <li class="page-item active" aria-current="page">
                     <span class="page-link">
@@ -67,10 +67,12 @@
                         <span class="sr-only">(current)</span>
                     </span>
                 </li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="{{ path('search', { stringToSearch: stringToSearch, offset:2 }) }}">2</a></li>
                 <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">...</a></li>
+                <li class="page-item"><a class="page-link" href="#">100</a></li>
                 <li class="page-item">
-                <a class="page-link" href="#">Next</a>
+                <a class="page-link" href="#"><i class="fas fa-angle-double-right"></i></a>
                 </li>
             </ul>
         </nav>
